add get room, get orders handler and add doc
